kuberenetes-manifests/apibuilder-dev-663cace50d4e004fd83a9146-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apibuilder-dev-663cace50d4e004fd83a9146
  namespace: dev
spec:
  gateways:
  - apiwiz-system/apiwiz-gateway
  hosts:
  - acme.apibuilder-test.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apibuilder-agent
        port:
          number: 8000
      headers:
        request:
          add:
            x-tenant: acme-team-gcp-stage-1715252450152--ApiBuilder
